* Use the Logger project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required (VERSION 2.6)
 project (boapd)
 
 add_definitions("-g -W -Wall -std=c++11")
-
+add_subdirectory("logger/logger")
+#link_directories("logger/logger")
 set(SOURCES src/main.cpp
 	    src/net/TcpServer.cpp
 	    src/net/TcpSession.cpp
@@ -10,8 +11,8 @@ set(SOURCES src/main.cpp
 	    src/net/ProtocolHandler.cpp)
 
 find_package(Boost COMPONENTS system REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS} "includes")
+include_directories(${Boost_INCLUDE_DIRS} "includes" "logger/logger/includes")
 
 
 add_executable(boapd ${SOURCES})
-target_link_libraries( boapd ${Boost_LIBRARIES} )
+target_link_libraries( boapd ${Boost_LIBRARIES} Logger)
