* Use shared library to load protocol handler and other business related code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,13 @@ project (boapd)
 add_definitions("-g -W -Wall -std=c++11")
 add_subdirectory("logger/logger")
 add_subdirectory("tp3")
+add_subdirectory("default-impl")
 
 #link_directories("logger/logger")
 set(SOURCES src/main.cpp
 	    src/net/TcpServer.cpp
 	    src/net/TcpSession.cpp
             src/net/UdpServer.cpp
-            src/net/IProtocolHandler.cpp
-	    src/net/DefaultTcpProtocolHandler.cpp
             src/Server.cpp)
 
 find_package(Boost COMPONENTS system REQUIRED)
@@ -19,4 +18,4 @@ include_directories(${Boost_INCLUDE_DIRS} "includes" "logger/logger/includes")
 
 
 add_executable(boapd ${SOURCES})
-target_link_libraries( boapd ${Boost_LIBRARIES} Logger)
+target_link_libraries( boapd ${Boost_LIBRARIES} Logger tp3 default-impl)
