uuid + other stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ add_subdirectory("DebugUtils")
 add_subdirectory("DetourCrowd")
 
 #link_directories("logger/logger")
-set(SOURCES src/main.cpp
+set(SOURCES 
+src/main.cpp
+src/Uuid.cpp
 src/ByteArray.cpp
             src/net/ATcpProtocolHandler.cpp
             src/net/AUdpProtocolHandler.cpp
