middle of refactorying

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,54 @@
 cmake_minimum_required (VERSION 2.6)
 project (boapd)
 
+find_package(Bullet REQUIRED)
+find_package(Protobuf REQUIRED)
+find_package(Boost COMPONENTS system REQUIRED)
+
 add_definitions("-g -W -Wall -std=c++11")
+
+add_subdirectory("protobuf")
 add_subdirectory("logger/logger")
-add_subdirectory("tp3")
+#add_subdirectory("tp3")
 add_subdirectory("Recast")
 add_subdirectory("Detour")
 add_subdirectory("DetourTileCache")
 add_subdirectory("DebugUtils")
 add_subdirectory("DetourCrowd")
 
-#link_directories("logger/logger")
 set(SOURCES 
+##Packets
+src/packets/HelloPacket.cpp
+src/packets/CMSGAuthPacket.cpp
+src/packets/CMSGCreateGame.cpp
+src/packets/CMSGGameList.cpp
+src/packets/CMSGJoinGame.cpp
+src/packets/CMSGUdpAuth.cpp
+src/packets/APacket.cpp
+##Factories
+src/BoapFactory.cpp
+src/packets/PacketFactory.cpp
+##Protocol handlers
+src/net/ATcpProtocolHandler.cpp
+src/net/AUdpProtocolHandler.cpp
+src/net/TcpServer.cpp
+src/net/UdpServer.cpp
+src/net/TcpSession.cpp
+src/net/TcpProtocolHandler.cpp
+src/net/UdpProtocolHandler.cpp
+src/net/AdminTcpHandler.cpp
+##Packet Handlers
+src/handlers/AuthPacketHandler.cpp
+src/handlers/CreateGameHandler.cpp
+src/handlers/GameListHandler.cpp
+src/handlers/HelloPacketHandler.cpp
+src/handlers/UdpAuthHandler.cpp
+src/handlers/APacketHandler.cpp
+
 src/main.cpp
 src/world/Game.cpp
 src/Uuid.cpp
 src/ByteArray.cpp
-            src/net/ATcpProtocolHandler.cpp
-            src/net/AUdpProtocolHandler.cpp
-	    src/net/TcpServer.cpp
-	    src/net/TcpSession.cpp
-            src/net/UdpServer.cpp
             src/world/World.cpp
 src/sql/SqlHandler.cpp
 src/sql/EntityTemplate.cpp
@@ -30,8 +58,6 @@ src/world/GameEntity.cpp
             src/AClient.cpp
             src/Scheduler.cpp
             src/SafeQueue.cpp
-            src/APacket.cpp
-            src/APacketHandler.cpp
 src/world/RecastConverter.cpp
 src/world/EntityFactory.cpp
 src/sql/ShapeTemplate.cpp
@@ -43,10 +69,10 @@ src/world/PathFindHelper.cpp
 src/world/MovableEntity.cpp
 )
 
-find_package(Boost COMPONENTS system REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS} "includes" "logger/logger/includes" "/usr/include/bullet" "Recast/Include" "Detour/Include" "DebugUtils/Include" "DetourTileCache/Include"
+include_directories(${Boost_INCLUDE_DIRS} ${PROTOBUF_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS}
+"includes" "logger/logger/includes" "Recast/Include" "Detour/Include" "DebugUtils/Include" "DetourTileCache/Include"
 "DetourCrowd/Include")
 
 
 add_executable(boapd ${SOURCES})
-target_link_libraries( boapd ${Boost_LIBRARIES} mysqlcppconn Logger tp3 BulletDynamics Detour Recast DebugUtils DetourTileCache DetourCrowd)
+target_link_libraries( boapd ${Boost_LIBRARIES} mysqlcppconn Logger BulletDynamics Detour Recast DebugUtils DetourTileCache DetourCrowd boapd-protobuf)
