--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ add_definitions("-g -W -Wall -std=c++11")
 
 add_subdirectory("protobuf")
 add_subdirectory("logger/logger")
-#add_subdirectory("tp3")
 add_subdirectory("Recast")
 add_subdirectory("Detour")
 add_subdirectory("DetourTileCache")
@@ -17,6 +16,7 @@ add_subdirectory("DebugUtils")
 add_subdirectory("DetourCrowd")
 
 set(SOURCES 
+
 ##Packets
 src/packets/HelloPacket.cpp
 src/packets/CMSGAuthPacket.cpp
@@ -24,10 +24,17 @@ src/packets/CMSGCreateGame.cpp
 src/packets/CMSGGameList.cpp
 src/packets/CMSGJoinGame.cpp
 src/packets/CMSGUdpAuth.cpp
+src/packets/SMSGAuth.cpp
+src/packets/SMSGCreateGame.cpp
+src/packets/SMSGGameList.cpp
+src/packets/SMSGUdpCode.cpp
 src/packets/APacket.cpp
+
 ##Factories
 src/BoapFactory.cpp
 src/packets/PacketFactory.cpp
+src/world/EntityFactory.cpp
+
 ##Protocol handlers
 src/net/ATcpProtocolHandler.cpp
 src/net/AUdpProtocolHandler.cpp
@@ -37,6 +44,7 @@ src/net/TcpSession.cpp
 src/net/TcpProtocolHandler.cpp
 src/net/UdpProtocolHandler.cpp
 src/net/AdminTcpHandler.cpp
+
 ##Packet Handlers
 src/handlers/AuthPacketHandler.cpp
 src/handlers/CreateGameHandler.cpp
@@ -45,33 +53,45 @@ src/handlers/HelloPacketHandler.cpp
 src/handlers/UdpAuthHandler.cpp
 src/handlers/APacketHandler.cpp
 
+##Clients
+src/AClient.cpp
+src/Client.cpp
+
+src/AuthTask.cpp
 src/main.cpp
+
+##World / game stuff
+src/world/World.cpp
 src/world/Game.cpp
-src/Uuid.cpp
-src/ByteArray.cpp
-            src/world/World.cpp
-src/sql/SqlHandler.cpp
-src/sql/EntityTemplate.cpp
 src/world/GameEntity.cpp
-            src/Clock.cpp
-            src/Server.cpp
-            src/AClient.cpp
-            src/Scheduler.cpp
-            src/SafeQueue.cpp
 src/world/RecastConverter.cpp
-src/world/EntityFactory.cpp
-src/sql/ShapeTemplate.cpp
 src/world/NavMeshBuilder.cpp
 src/world/InputGeom.cpp
 src/world/MeshLoaderObj.cpp
 src/world/ChunkyTriMesh.cpp
 src/world/PathFindHelper.cpp
 src/world/MovableEntity.cpp
+
+##Utils
+src/Uuid.cpp
+src/ByteArray.cpp
+src/Clock.cpp
+src/Scheduler.cpp
+src/SafeQueue.cpp
+
+## Sql
+src/sql/SqlHandler.cpp
+src/sql/EntityTemplate.cpp
+src/sql/ShapeTemplate.cpp
+
+## Server
+src/Server.cpp
+
 )
 
 include_directories(${Boost_INCLUDE_DIRS} ${PROTOBUF_INCLUDE_DIRS} ${BULLET_INCLUDE_DIRS}
 "includes" "logger/logger/includes" "Recast/Include" "Detour/Include" "DebugUtils/Include" "DetourTileCache/Include"
-"DetourCrowd/Include")
+"DetourCrowd/Include" "protobuf")
 
 
 add_executable(boapd ${SOURCES})
