More database / init stuff -- still a lot of WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,8 @@ src/world/ResourceEntity.cpp
 src/world/ResourceCollectorEntity.cpp
 src/world/PathFindResult.cpp
 
+src/world/AreaInstance.cpp
+src/world/GameObject.cpp
 src/world/WorldObject.cpp
 
 ##Utils
